syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "Keymanager";
option objc_class_prefix = "HLW";

import "google/protobuf/empty.proto";
package br.com.zup.edu;

service KeyManagerService {
  rpc registraChavePix(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
  rpc removerChavePix(RemoverChavePixRequest) returns (google.protobuf.Empty) {}
}

message RegistraChavePixRequest{
  string codigoCliente = 1;
  TipoChave TipoChave = 2;
  string valorChave = 3;
  TipoConta TipoConta = 4;
}

message RegistraChavePixResponse{
  string pixId = 1;
}

message RemoverChavePixRequest{
  string pixId = 1;
  string codigoCliente = 2;
}


enum TipoChave{
  CPF = 0;
  CELULAR = 1;
  EMAIL = 2;
  ALEATORIA = 3;
}

enum TipoConta{
  CONTA_CORRENTE = 0;
  CONTA_POUPANCA = 1;
}
